Added library with electronics

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 3D/~$SimpleLighter.SLDASM
 3D/~$sot-23-5leads.SLDPRT
 3D/~$WE-PD-7345.SLDPRT
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(2).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(1).SchDoc.Zip
+Electronics/SimpleFlashlight/__Previews/SimpleFlashlight.SchDocPreview
