Update scheme and create PCB

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,25 @@
 Electronics/SimpleFlashlight/History/SimpleFlashlight.~(2).SchDoc.Zip
 Electronics/SimpleFlashlight/History/SimpleFlashlight.~(1).SchDoc.Zip
 Electronics/SimpleFlashlight/__Previews/SimpleFlashlight.SchDocPreview
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(3).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(4).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(1).PrjPcb.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(5).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(6).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(7).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(8).SchDoc.Zip
+Electronics/Calculation.txt
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(10).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(9).SchDoc.Zip
+Electronics/lib/DC-DC1/History/PMP12082_TID.~(1).PcbLib.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(12).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(13).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(14).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(15).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(16).SchDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(2).PrjPcb.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(3).PrjPcb.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(1).PcbDoc.Zip
+Electronics/SimpleFlashlight/History/SimpleFlashlight.~(11).SchDoc.Zip
+Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/SimpleFlashlight SCH ECO 05.12.2020 3-50-23.LOG
+Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/SimpleFlashlight PCB ECO 05.12.2020 3-52-03.LOG
