A little changes in scheme

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ Electronics/SimpleFlashlight/History/SimpleFlashlight.~(1).PcbDoc.Zip
 Electronics/SimpleFlashlight/History/SimpleFlashlight.~(11).SchDoc.Zip
 Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/SimpleFlashlight SCH ECO 05.12.2020 3-50-23.LOG
 Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/SimpleFlashlight PCB ECO 05.12.2020 3-52-03.LOG
+*.~*.*.Zip
