--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/SimpleFlashlight 
 Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/SimpleFlashlight PCB ECO 05.12.2020 3-52-03.LOG
 *.~*.*.Zip
 ~$*.*
+*.LOG
