Update DRC with recommended values from JLCPCB. Finally made PCB tracing.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/SimpleFlashlight 
 *.~*.*.Zip
 ~$*.*
 *.LOG
+Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Design Rule Check - SimpleFlashlight.html
+Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Design Rule Check - SimpleFlashlight.drc
