--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/SimpleFlashlight 
 *.LOG
 Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Design Rule Check - SimpleFlashlight.html
 Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Design Rule Check - SimpleFlashlight.drc
+Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Status Report.Txt
