--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/SimpleFlashlight 
 Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Design Rule Check - SimpleFlashlight.html
 Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Design Rule Check - SimpleFlashlight.drc
 Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Status Report.Txt
+Electronics/SimpleFlashlight/SimpleFlashlight.err
