--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,5 @@
 
-3D/~$5730_SMD_LED.SLDPRT
-3D/~$9V_Battery.SLDPRT
-3D/~$CAP 0805.SLDPRT
-3D/~$CAP 1210-2.0mm.SLDPRT
-3D/~$Cross Recessed Pan Head Self-tapping Screw - no standard.SLDPRT
-3D/~$Resistor 0805.SLDPRT
-3D/~$Resistor 1206.SLDPRT
-3D/~$SimpleLighter.SLDASM
-3D/~$sot-23-5leads.SLDPRT
-3D/~$WE-PD-7345.SLDPRT
+3D/~$*.SLDPRT
 Electronics/SimpleFlashlight/History/SimpleFlashlight.~(2).SchDoc.Zip
 Electronics/SimpleFlashlight/History/SimpleFlashlight.~(1).SchDoc.Zip
 Electronics/SimpleFlashlight/__Previews/SimpleFlashlight.SchDocPreview
@@ -41,3 +32,4 @@ Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Design Rule Ch
 Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Design Rule Check - SimpleFlashlight.drc
 Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Status Report.Txt
 Electronics/SimpleFlashlight/SimpleFlashlight.err
+SimpleFlashlight/Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/
