Updated layers in the pcb

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Design Rule Ch
 Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Status Report.Txt
 Electronics/SimpleFlashlight/SimpleFlashlight.err
 SimpleFlashlight/Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/
+SimpleFlashlight/Electronics/SimpleFlashlight/__Previews/*
