--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ Electronics/SimpleFlashlight/Project Outputs for SimpleFlashlight/Status Report.
 Electronics/SimpleFlashlight/SimpleFlashlight.err
 SimpleFlashlight/Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/
 SimpleFlashlight/Electronics/SimpleFlashlight/__Previews/*
+Assembling manual.docx
