Replaced chamfer to fillet at the face of flashlight. Updated the slider-slot configuration: added 0.5 mm to the slider thickness and chamfers to each sides.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ Electronics/SimpleFlashlight/SimpleFlashlight.err
 SimpleFlashlight/Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/
 SimpleFlashlight/Electronics/SimpleFlashlight/__Previews/*
 Assembling manual.docx
+ToDo.txt
