Updated preview picture. Updated the assembly drawing.

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ SimpleFlashlight/Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/
 SimpleFlashlight/Electronics/SimpleFlashlight/__Previews/*
 Assembling manual.docx
 ToDo.txt
+Rendering/*.*
+BOM.xlsx
