--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 3D/~$*.SLDPRT
-Electronics/SimpleFlashlight/History/*
-SimpleFlashlight/Electronics/lib/*
+Electronics/SimpleFlashlight/History/*.*
+SimpleFlashlight/Electronics/lib/*.*
 SimpleFlashlight/Electronics/SimpleFlashlight/Project Logs for SimpleFlashlight/*
 Electronics/SimpleFlashlight/__Previews/*
 Electronics/Calculation.txt
@@ -21,5 +21,5 @@ ToDo.txt
 Rendering/*.*
 BOM.xlsx
 Electronics/BOMforPCB.xlsx
-Electronics/lib/*
-Electronics/SimpleFlashlight/__Previews/*
+Electronics/lib/*.*
+Electronics/SimpleFlashlight/__Previews/*.*
