--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ ToDo.txt
 Rendering/*.*
 BOM.xlsx
 Electronics/BOMforPCB.xlsx
-Electronics/lib/*.*
+Electronics/lib/**
 Electronics/SimpleFlashlight/__Previews/*.*
